#11502 엑셀 다운로드 기능 확장 -> MR 응대

--- a/src/main/resources/public/template/token/tokenSearch.html
+++ b/src/main/resources/public/template/token/tokenSearch.html
@@ -206,7 +206,7 @@
 
     function onExcelDownload() {
         document.getElementById('searchToDt').value = i18n.makeUserDate(document.getElementById('toDt').value, {'days': 1});
-        const search = aliceJs.serialize(document.getElementById('frmSearch')) + '&target=excel';
+        const search = aliceJs.serialize(document.getElementById('frmSearch'));
         aliceJs.fetchDownload({
             url: '/rest/tokens/excel?' + search,
             fileName: i18n.msg('token.label.list') + '_' + new Date().toISOString().substring(0, 10).replace(/-/g, '')
