--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -190,6 +190,7 @@
                 onCreate: function(modal) {
                     // color picker 초기화
                     new zColorPicker(document.getElementById('documentColor'), { type: 'fill' });
+                    if (!document.getElementById('documentColor').value) document.getElementById('documentColor').setAttribute('value','#000000');
                     // 신청서 상태 초기화
                     const statusElem = document.getElementById('document-status');
                     const prevStatus = document.getElementById('prev-document-status').value;
