--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-    xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorate="~{layout/itsm/pageType/pagingListLayout}">
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout/itsm/pageType/pagingListLayout}">
 <head>
     <title th:text="#{user.label.user}"></title>
 </head>
@@ -72,7 +72,7 @@
 
     function onExcelDownload() {
         aliceJs.fetchDownload({
-            url: '/rest/users/excel',
+            url: '/rest/users/excel?searchValue=' + encodeURIComponent(document.getElementById('searchValue').value),
             fileName: i18n.msg('user.label.user') + '_' + new Date().toISOString().substring(0, 10).replace(/-/g, '')
         });
     }
