--- a/src/main/resources/public/template/notice/noticeList.html
+++ b/src/main/resources/public/template/notice/noticeList.html
@@ -33,7 +33,7 @@
             <td style="width:20%;" class="align-left date-time" th:text="${topNotice.topNoticeStartDt} + '~' + ${topNotice.topNoticeEndDt}" th:title="${topNotice.topNoticeStartDt} + '~' + ${topNotice.topNoticeEndDt}"></td>
             <td style="width:15%;" class="align-left date-time" th:text="${topNotice.createDt}" th:title="${topNotice.createDt}"></td>
         </tr>
-        <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(noticeList)}">
+        <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(noticeList)} and ${#arrays.isEmpty(topNoticeList)}">
             <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
         <tr class="flex-row align-items-center" th:each="notice : ${noticeList}">
