--- a/src/main/resources/public/template/user/userListModal.html
+++ b/src/main/resources/public/template/user/userListModal.html
@@ -8,34 +8,30 @@
         <thead class="z-table-head">
             <tr>
                 <th style="width: 5%;" class="align-center"></th>
-                <th style="width:10%;" class="align-left" th:text="#{user.label.name}"></th>
-                <th style="width:10%;" class="align-left" th:text="#{user.label.id}"></th>
+                <th style="width:20%;" class="align-left" th:text="#{user.label.name}"></th>
+                <th style="width:20%;" class="align-left" th:text="#{user.label.id}"></th>
                 <th style="width:20%;" class="align-left" th:text="#{user.label.email}"></th>
-                <th style="width:15%;" class="align-left" th:text="#{user.label.department}"></th>
-                <th style="width:10%;" class="align-left" th:text="#{user.label.position}"></th>
-                <th style="width:15%;" class="align-left" th:text="#{user.label.officeNumber}"></th>
-                <th style="width:15%;" class="align-left" th:text="#{user.label.mobileNumber}"></th>
+                <th style="width:20%;" class="align-left" th:text="#{user.label.department}"></th>
+                <th style="width:15%;" class="align-left" th:text="#{user.label.position}"></th>
             </tr>
         </thead>
         <tbody id="substituteUserList" class="z-table-body">
             <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(userList)}">
                 <td style="width:100%" colspan="4" class="align-center" th:text="#{common.msg.noData}"></td>
             </tr>
-            <tr class="flex-row align-items-center" th:each="user, index : ${userList}">
+            <tr class="flex-row align-items-center z-table-row" th:each="user : ${userList}">
                 <td style="width: 5%;" class="align-center text-clip">
-                    <label class="z-radio" th:for="${index.index}" tabindex="0">
-                        <input type="radio" th:id="${index.index}" th:value="${user.userKey}"
-                               th:name="${user.userName}" th:title="${user.userName}">
+                    <label class="z-radio" th:for="${user.userKey}" tabindex="0">
+                        <input type="radio" th:id="${user.userKey}" th:value="${user.userName}"
+                               name="substituteUser" th:title="${user.userName}">
                         <span></span>
                     </label>
                 </td>
-                <td style="width:10%;" class="align-left" th:text="${user.userName}" th:title="${user.userName}"></td>
-                <td style="width:10%;" class="align-left" th:text="${user.userId}" th:title="${user.userId}"></td>
+                <td style="width:20%;" class="align-left" th:text="${user.userName}" th:title="${user.userName}"></td>
+                <td style="width:20%;" class="align-left" th:text="${user.userId}" th:title="${user.userId}"></td>
                 <td style="width:20%;" class="align-left" th:text="${user.email}" th:title="${user.email}"></td>
-                <td style="width:15%;" class="align-left" th:text="${user.department}" th:title="${user.department}"></td>
-                <td style="width:10%;" class="align-left" th:text="${user.position}" th:title="${user.position}"></td>
-                <td style="width:15%;" class="align-left" th:text="${user.officeNumber}" th:title="${user.officeNumber}"></td>
-                <td style="width:15%;" class="align-left" th:text="${user.mobileNumber}" th:title="${user.mobileNumber}"></td>
+                <td style="width:20%;" class="align-left" th:text="${user.department}" th:title="${user.department}"></td>
+                <td style="width:15%;" class="align-left" th:text="${user.position}" th:title="${user.position}"></td>
             </tr>
         </tbody>
     </table>
