#11844 [포탈] 전체조회 화면에서 글이 10개이면 스크롤 동작이 이상하다

--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -970,6 +970,14 @@ input, button, select, optgroup, textarea {
   max-width: 120rem;
   margin: 0 auto;
   overflow-y: auto;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+.z-portal-container .z-main::-webkit-scrollbar {
+  display: none;
+  /* Chrome, Safari, Opera*/
 }
 .z-portal-container .z-main .z-main-content {
   height: 100%;
