--- a/src/main/resources/public/scss/portal/_layout.scss
+++ b/src/main/resources/public/scss/portal/_layout.scss
@@ -63,6 +63,7 @@
     max-width: 120rem;
     margin: 0 auto;
     overflow-y: auto;
+    @include scrollbarHidden;
 
     .z-main-content {
       height: 100%;
@@ -81,7 +82,7 @@
         padding: 1.875rem 0; // 30px 0
 
         // 포탈 메인 화면이 슬라이딩 되면, 리스트 영역의 너비가 변경됨
-        &.slide-up {
+       &.slide-up {
           + .z-main-card .z-card-list {
             height: calc(#{$main-banner-height} + #{$content-list-height});
           }
