--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -10,7 +10,7 @@
     <div id="mainBanner" class="z-main-banner">
         <h1 class="title align-center" th:text="#{portal.label.topPhrase}"></h1>
     </div>
-    <div id="mainSearch" class="z-main-search align-center">
+    <div id="mainSearch" class="z-main-search align-center slide-down">
         <input type="text" class="col-8 z-input i-search text-ellipsis mr-2" id="searchValue" name="searchValue"
                th:value="${portalSearchDto?.searchValue}"
                th:placeholder="#{common.label.searchWord}" maxlength="100"/>
@@ -184,7 +184,10 @@
                                 const scrollHeight = e.target.scrollHeight;
                                 const scrollTop = e.target.scrollTop;
                                 const clientHeight = e.target.clientHeight;
-                                if (scrollTop > 20) {
+                                if (scrollHeight <= clientHeight) { // 스크롤이 없으면 동작 안함
+                                    return false;
+                                }
+                                if (scrollTop > 0) {
                                     document.getElementById('mainSearch').classList.remove('slide-down');
                                     document.getElementById('mainSearch').classList.add('slide-up');
                                     document.getElementById('mainBanner').style.display='none';
