--- a/src/main/resources/public/template/portal/download/downloadList.html
+++ b/src/main/resources/public/template/portal/download/downloadList.html
@@ -5,12 +5,12 @@
 <table class="z-table flex-column">
     <thead class="z-table-head">
         <tr class="flex-row">
-            <th style="width:5%;" th:text="#{download.label.seq}"></th>
-            <th style="width:10%;" th:text="#{download.label.category}"></th>
-            <th style="width:45%;" th:text="#{common.label.title}"></th>
-            <th style="width:10%;" th:text="#{common.label.createUser}"></th>
-            <th style="width:20%;" th:text="#{common.label.createDate}"></th>
-            <th style="width:10%;" th:text="#{download.label.views}"></th>
+            <th style="width:5%;" class="align-center" th:text="#{download.label.seq}"></th>
+            <th style="width:10%;" class="align-center" th:text="#{download.label.category}"></th>
+            <th style="width:45%;" class="align-left" th:text="#{common.label.title}"></th>
+            <th style="width:10%;" class="align-center" th:text="#{download.label.views}"></th>
+            <th style="width:10%;" class="align-center" th:text="#{common.label.createUser}"></th>
+            <th style="width:20%;" class="align-center" th:text="#{common.label.createDate}"></th>
         </tr>
     </thead>
     <tbody class="z-table-body">
@@ -26,9 +26,9 @@
                        th:href="@{/portals/downloads/{id}/view(id=${download.downloadId})}" th:title="${download.downloadTitle}">
                     </a>
                 </td>
+                <td style="width:10%;" class="align-center" th:text="${download.views}" th:title="${download.views}"></td>
                 <td style="width:10%;" class="align-center" th:text="${download.createUserName}" th:title="${download.createUserName}"></td>
                 <td style="width:20%;" class="align-center date-time" th:text="${download.createDt}" th:title="${download.createDt}"></td>
-                <td style="width:10%;" class="align-center" th:text="${download.views}" th:title="${download.views}"></td>
             </tr>
         </th:block>
     </tbody>
