--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -23,6 +23,8 @@
                 <span>~</span>
                 <input type="text" id="searchToDt" name="searchToDt" class="z-input i-date-picker search-date col-3 mr-2"/>
                 <input type="hidden" id="toDt" name="toDt" readonly="readonly" class="search-date"/>
+                <!-- 리스트 검색 갯수 : 포탈 화면 고려해서 13개로 처리함 -->
+                <input type="hidden" id="contentNumPerPage" name="contentNumPerPage" readonly="readonly" value="13"/>
                 <th:block th:replace="layout/portal/fragment/totalCountFragment :: totalCountFragment"></th:block>
             </form>
         </div>
@@ -34,7 +36,6 @@
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
         /*<![CDATA[*/
-        let offsetCount = 0;
         let searchFromDt = i18n.getDate({'months': -1});
         let searchToDt = i18n.getDate();
 
@@ -80,7 +81,6 @@
         }
 
         function getList(pageNum = 1) {
-            let urlParam = '';
             document.getElementById('toDt').value =
                 i18n.makeUserDate(document.getElementById('searchToDt').value, {'days': 1});
             restSubmit('get', '/portals/downloads?' + aliceJs.serialize(document.getElementById('searchFrm')) + '&pageNum=' + pageNum);
