--- a/src/main/resources/public/template/portal/notice/noticeList.html
+++ b/src/main/resources/public/template/portal/notice/noticeList.html
@@ -2,9 +2,9 @@
 <table class="z-table flex-column">
     <thead class="z-table-head">
         <tr class="flex-row">
-            <th width="75%" th:text="#{common.label.title}"></th>
-            <th width="10%" th:text="#{common.label.createUser}"></th>
-            <th width="15%" th:text="#{common.label.createDate}"></th>
+            <th width="75%" class="align-left" th:text="#{common.label.title}"></th>
+            <th width="10%" class="align-center" th:text="#{common.label.createUser}"></th>
+            <th width="15%" class="align-center" th:text="#{common.label.createDate}"></th>
         </tr>
     </thead>
     <tbody class="z-table-body">
@@ -16,7 +16,7 @@
             <td width="10%" class="align-center" th:text="${topNotice?.createUserName}"></td>
             <td width="15%" class="align-center date-time" th:text="${topNotice.createDt}"></td>
         </tr>
-        <tr class="no-data-found-list" th:if="${#arrays.isEmpty(noticeList)}">
+        <tr class="no-data-found-list" th:if="${#arrays.isEmpty(noticeList)} and ${#arrays.isEmpty(topNoticeList)}">
             <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
         </tr>
         <th:block th:fragment="list">
