--- a/src/main/resources/public/template/portal/notice/noticeSearch.html
+++ b/src/main/resources/public/template/portal/notice/noticeSearch.html
@@ -20,6 +20,8 @@
                 <span>~</span>
                 <input type="text" class="z-input i-date-picker search-date col-3 mr-2" id="searchToDt" name="searchToDt"/>
                 <input type="hidden" class="search-date" id="toDt" name="toDt" readonly="readonly"/>
+                <!-- 리스트 검색 갯수 : 포탈 화면 고려해서 13개로 처리함 -->
+                <input type="hidden" id="contentNumPerPage" name="contentNumPerPage" readonly="readonly" value="13"/>
                 <th:block th:replace="layout/portal/fragment/totalCountFragment :: totalCountFragment"></th:block>
             </form>
         </div>
@@ -31,7 +33,6 @@
 </body>
 <script layout:fragment="pageScript" th:inline="javascript">
     /*<![CDATA[ */
-    let offsetCount = 0;
     let searchFromDt = i18n.getDate({'months': -1});
     let searchToDt = i18n.getDate();
 
@@ -87,7 +88,7 @@
     }
 
     //REST API
-    function restSubmit(method, url, isScroll) {
+    function restSubmit(method, url) {
         const opt = {
             method: method,
             url: url,
@@ -96,7 +97,6 @@
             callbackFunc: function (response) {
                 let listBody = document.querySelector('#noticeList');
                 listBody.innerHTML = response.responseText;
-
                 setDateTimeFormat(listBody);
             }
         };
