--- a/src/main/resources/public/template/token/tokenTab.html
+++ b/src/main/resources/public/template/token/tokenTab.html
@@ -11,10 +11,10 @@
             <table class="z-table z-token-history-table">
                 <thead class="z-table-head">
                 <tr class="flex-row align-items-center">
-                    <th style="width: 35%;" class="align-left" th:text="#{token.label.startDt}"></th>
-                    <th style="width: 25%;" class="align-left" th:text="#{token.label.elementName}"></th>
-                    <th style="width: 20%;" class="align-left" th:text="#{token.label.assignee}"></th>
-                    <th style="width: 20%;" class="align-left" th:text="#{token.label.process}"></th>
+                    <th style="width: 30%;" class="align-center" th:text="#{token.label.startDt}"></th>
+                    <th style="width: 32%;" class="align-center" th:text="#{token.label.elementName}"></th>
+                    <th style="width: 20%;" class="align-center" th:text="#{token.label.assignee}"></th>
+                    <th style="width: 18%;" class="align-center" th:text="#{token.label.status}"></th>
                 </tr>
                 </thead>
                 <tbody class="z-table-body" id="history"></tbody>
