#11834 [보고서] 사용자 정의 차트 등록 시 콘솔에 오류가 표시

--- a/src/main/resources/public/template/chart/chart.html
+++ b/src/main/resources/public/template/chart/chart.html
@@ -463,9 +463,13 @@
          */
         function getChartData() {
             let tags = [];
-            JSON.parse(document.getElementById('targetTags').value).forEach(tag => {
-                tags.push({ value: tag.value })
-            });
+            const targetTags = document.getElementById('targetTags').value;
+            if (targetTags !== '') {
+                JSON.parse(targetTags).forEach(tag => {
+                    tags.push({value: tag.value})
+                });
+            }
+
 
             let fromDt = document.getElementById('rangeFromDt').getAttribute('data-userDateTime');
             let toDt = document.getElementById('rangeToDt').getAttribute('data-userDateTime');
