--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -829,6 +829,16 @@ input, button, select, optgroup, textarea {
   -webkit-mask-position: center;
   mask-position: center;
 }
+.z-icon.i-download-as-excel {
+  width: 1.5rem;
+  height: 1.5rem;
+  -webkit-mask-image: url("../media/icons/icon_download_xls.svg");
+  mask-image: url("../media/icons/icon_download_xls.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+}
 
 .z-icon.i-save {
   width: 1.5rem;
@@ -2569,7 +2579,7 @@ svg path.connector.hidden {
 }
 .z-button.primary .z-icon,
 .z-button-icon.primary .z-icon {
-  display: inline-block;
+  display: block;
   background: #FFFFFF;
   pointer-events: none;
 }
@@ -2626,7 +2636,7 @@ svg path.connector.hidden {
 }
 .z-button.secondary .z-icon,
 .z-button-icon.secondary .z-icon {
-  display: inline-block;
+  display: block;
   background: #339AF0;
   pointer-events: none;
 }
@@ -2683,7 +2693,7 @@ svg path.connector.hidden {
 }
 .z-button.extra .z-icon,
 .z-button-icon.extra .z-icon {
-  display: inline-block;
+  display: block;
   background: #339AF0;
   pointer-events: none;
 }
@@ -2740,7 +2750,7 @@ svg path.connector.hidden {
 }
 .z-button.form .z-icon,
 .z-button-icon.form .z-icon {
-  display: inline-block;
+  display: block;
   background: #424242;
   pointer-events: none;
 }
@@ -3018,7 +3028,7 @@ svg path.connector.hidden {
 }
 
 .z-button-icon {
-  padding: 0.25rem 0.3125rem;
+  padding: 0.3125rem;
 }
 
 .z-button-list {
