--- a/src/main/resources/public/scss/template/_icons.scss
+++ b/src/main/resources/public/scss/template/_icons.scss
@@ -99,4 +99,9 @@
   &.i-tooltip {
     @include maskImage('#{$icon-folder-path}icon_tooltip.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
   }
+
+  // 엑셀 다운로드
+  &.i-download-as-excel {
+    @include maskImage('#{$icon-folder-path}icon_download_xls.svg', 1.5rem, 1.5rem, no-repeat, center); // 24px 24px
+  }
 }
